# graph-thingie

./: .gitattributes  .gitignore  LICENSE  README.md  flake.nix  package-lock.json  package.json  rustfmt.toml  tsconfig.json
api/: Cargo.toml
api/src/: main.rs
graphviz/: .eslintrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
graphviz/src/: app.ts  connections.ts  globe.ts  main.ts  style.scss  types.d copy.ts
graphviz/src/shaders/: fragment.ts  vertex.ts
